fix: changed heights throughout to fit on mobile

--- a/components/atoms/Panel/panel.module.scss
+++ b/components/atoms/Panel/panel.module.scss
@@ -6,7 +6,7 @@
   width: 100%;
   border-radius: 20px;
   z-index: 98;
-  height: calc(100vh - 280px);
+  height: calc(100% - 10px);
   overflow-y: scroll;
   margin-bottom: 10px;
 }
@@ -14,13 +14,12 @@
 
 @include mq($from: tablet) {
   .panel {
-    height:calc(100vh - 245px);
+    height:calc(100% - 85px);
   }
 }
 
-//Desktop screens that are too short to show 3 tabs down the side
-@media screen and (min-width: 740px) and (max-width: 980px) and (max-height: 900px) {
+@include mq($from: desktop)  {
     .panel {
-    height:calc(100vh - 315px);
+    height:calc(100% - 80px);
   }
 }
