--- a/components/organisms/Sidebar/sidebar.module.scss
+++ b/components/organisms/Sidebar/sidebar.module.scss
@@ -450,7 +450,6 @@
   .sidebar {
     position: relative;
     width: 100%;
-    min-height: 63px;
     height: auto;
     padding-left: 0;
     background-color: $background;
